# JustReadIt

./: .gitignore  LICENSE  README.en.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
doc/: story-init.md  story.md  trampoline-memory-guide.md
plugins/: base.py
scripts/: install_ja_ocr.ps1
src/: app_backend.py  cache.py  capture.py  config.py  controller.py  correction.py  languages.py  mcp_server.py  overlay.py  paths.py  target.py  text_utils.py
src/dataset/: __init__.py  _db.py  dataset.py  dataset_dialog.py
src/hook/: __init__.py  _win32.py  build.ps1  candidate_scorer.py  cleaner.py  diag_script.js  hook_code.py  hook_engine.c  hook_script.js  hook_search.js  hook_search.py  text_hook.py
src/knowledge/: __init__.py  _db.py  knowledge_base.py  knowledge_manager.py  tools.py
src/memory/: __init__.py  _search.py  _win32.py  build.ps1  mem_scan.c  mem_scan.exp  mem_scan.lib  scanner.py
src/ocr/: manga_ocr_engine.py  range_detectors.py  windows_ocr.py
src/translators/: __init__.py  _installer.py  _panel_base.py  base.py  cloud_panel.py  cloud_translation.py  factory.py  google_cloud_translation.py  google_free.py  google_free_panel.py  openai_panel.py  openai_translator.py
src/translators/cloud/: __init__.py  panel.py  translator.py
src/translators/google_free/: __init__.py  panel.py  translator.py
src/translators/openai/: __init__.py  panel.py  translator.py
src/ui/: _config_model.py  _translator_settings.py  dataset_dialog.py  debug_window.py  knowledge_manager.py  main_window.py  window_picker.py
tests/: conftest.py  test_candidate_scorer.py  test_capture.py  test_correction.py  test_correction_dataset.py  test_hook.py  test_languages.py  test_manga_ocr.py  test_memory_scanner.py  test_ocr.py  test_target.py
tests/extra/: correction_samples_export.csv
tests/fixtures/: README.md  correction_samples.csv
