[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "justreadit"
version = "0.1.0"
description = "Hover-translation tool for Light.VN-based RPG games"
license = { text = "MPL-2.0" }
requires-python = ">=3.11"
dependencies = [
    "manga-ocr",
    "frida",
    # Windows OCR – split packages from winrt (Microsoft-maintained)
    "winrt-runtime",
    "winrt-Windows.Media.Ocr",
    "winrt-Windows.Graphics.Imaging",
    "winrt-Windows.Storage.Streams",
    "winrt-Windows.Foundation",
    "winrt-Windows.Foundation.Collections",
    "winrt-Windows.Globalization",
    "imagehash",
    "rapidfuzz",
    "pywin32",
    "Pillow",
    "dxcam",        # DXGI Desktop Duplication capture
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pip-licenses",
]
ui = [
    "PySide6",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# test_manga_ocr.py imports torch before WinRT is initialised.
# Running it in the same process as test_ocr.py (which calls init_apartment)
# causes c10.dll init failure (WinError 1114).  Run it in isolation:
#   pytest tests/test_manga_ocr.py
addopts = "--ignore=tests/test_manga_ocr.py"
